test/scopes/reject/fail5.rift
let
  fn id(x: i64): i64 = x
in
  id(y)
end
